--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -10,6 +10,29 @@ body {
   clear: both;
 }
 
+.wd-nav-item {
+  color: black;
+  text-decoration: none;
+}
+
+.wd-nav-item:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.wd-nav-item-active {
+  text-decoration: none;
+  background-color: #0d6efd;
+}
+
+.wd-nav-item-active .wd-nav-item {
+  color: white;
+}
+
+.wd-nav-icon {
+  min-width: 42px;
+}
+
 .wd-image-title {
   position: absolute;
   bottom: 0px;
